@@ -5,11 +5,9 @@ import com.google.inject.Inject;
 import jakarta.ws.rs.NotFoundException;
 import java.sql.Timestamp;
 import java.util.Collections;
-import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.Optional;
 import java.util.Set;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -17,42 +15,29 @@ import org.broadinstitute.consent.http.db.DarCollectionDAO;
 import org.broadinstitute.consent.http.db.DataAccessRequestDAO;
 import org.broadinstitute.consent.http.db.DatasetDAO;
 import org.broadinstitute.consent.http.db.ElectionDAO;
-import org.broadinstitute.consent.http.db.MatchDAO;
-import org.broadinstitute.consent.http.enumeration.ElectionType;
-import org.broadinstitute.consent.http.models.Dac;
-import org.broadinstitute.consent.http.models.DacDecisionMetrics;
 import org.broadinstitute.consent.http.models.DarCollection;
-import org.broadinstitute.consent.http.models.DarDecisionMetrics;
 import org.broadinstitute.consent.http.models.DataAccessRequest;
-import org.broadinstitute.consent.http.models.Dataset;
 import org.broadinstitute.consent.http.models.DatasetMetrics;
-import org.broadinstitute.consent.http.models.DecisionMetrics;
 import org.broadinstitute.consent.http.models.Election;
-import org.broadinstitute.consent.http.models.Match;
-import org.broadinstitute.consent.http.models.Type;
 import org.broadinstitute.consent.http.models.dto.DatasetDTO;
 
 public class MetricsService {
 
-  private final DacService dacService;
   private final DatasetDAO dataSetDAO;
   private final DataAccessRequestDAO darDAO;
   private final DarCollectionDAO darCollectionDAO;
-  private final MatchDAO matchDAO;
   private final ElectionDAO electionDAO;
 
   @Inject
-  public MetricsService(DacService dacService, DatasetDAO dataSetDAO, DataAccessRequestDAO darDAO,
-      DarCollectionDAO darCollectionDAO, MatchDAO matchDAO, ElectionDAO electionDAO) {
-    this.dacService = dacService;
+  public MetricsService(DatasetDAO dataSetDAO, DataAccessRequestDAO darDAO,
+      DarCollectionDAO darCollectionDAO, ElectionDAO electionDAO) {
     this.dataSetDAO = dataSetDAO;
     this.darDAO = darDAO;
     this.darCollectionDAO = darCollectionDAO;
-    this.matchDAO = matchDAO;
     this.electionDAO = electionDAO;
   }
 
-  public class DarMetricsSummary {
+  public static class DarMetricsSummary {
 
     final Timestamp updateDate;
     @JsonProperty
@@ -81,157 +66,6 @@ public class MetricsService {
     }
   }
 
-  public String getHeaderRow(Type type) {
-    switch (type) {
-      case DAR:
-        return DarDecisionMetrics.headerRow;
-      case DAC:
-        return DacDecisionMetrics.headerRow;
-      default:
-        return "\n";
-    }
-  }
-
-  public List<? extends DecisionMetrics> generateDecisionMetrics(Type type) {
-    List<DataAccessRequest> dars = darDAO.findAllDataAccessRequests();
-    List<String> referenceIds =
-        dars.stream().map(DataAccessRequest::getReferenceId).collect(Collectors.toList());
-    List<Integer> datasetIds =
-        dars.stream()
-            .map(DataAccessRequest::getDatasetIds)
-            .flatMap(List::stream)
-            .collect(Collectors.toList());
-    List<Dataset> datasets = dataSetDAO.findDatasetsByIdList(datasetIds);
-    List<Election> elections = electionDAO.findLastElectionsByReferenceIds(referenceIds);
-    List<Match> matches = matchDAO.findMatchesForPurposeIds(referenceIds);
-    List<Integer> electionIds =
-        elections.stream().map(Election::getElectionId).collect(Collectors.toList());
-    List<Dac> dacs = electionDAO.findAllDacsForElectionIds(electionIds);
-    //this method generates a list of DarDecisionMetrics representing the given list of dars and including
-    //information about each dar's datasets, elections, match, and dac
-    List<DarDecisionMetrics> darMetrics = getDarMetrics(dars, datasets, elections, matches, dacs);
-    if (type == Type.DAR) {
-      return darMetrics;
-    } else {
-      //if the type is not DAR then it is DAC, so this method returns a list of DacDecisionMetrics representing
-      //each dac including information about their datasets and dars that they've reviewed
-      List<Dac> allDacs = dacService.findAllDacsWithMembers();
-      Set<DatasetDTO> datasetsDacs = dataSetDAO.findDatasetsWithDacs();
-      return getDacMetrics(allDacs, datasetsDacs, darMetrics);
-    }
-  }
-
-  private List<DarDecisionMetrics> getDarMetrics(List<DataAccessRequest> dars,
-      List<Dataset> datasets, List<Election> elections, List<Match> matches, List<Dac> dacs) {
-    List<Integer> darCollectionIds = dars.stream().map(DataAccessRequest::getCollectionId)
-        .collect(Collectors.toList());
-    List<DarCollection> darCollections = darCollectionIds.isEmpty() ? List.of() :
-        darCollectionDAO.findDARCollectionByCollectionIds(darCollectionIds);
-    Map<Integer, DarCollection> collectionMap = darCollections.stream()
-        .collect(Collectors.toMap(DarCollection::getDarCollectionId, Function.identity()));
-
-    return dars.stream()
-        .map(
-            dataAccessRequest -> {
-              Integer datasetId =
-                  dataAccessRequest.getDatasetIds().stream().findFirst().orElse(0);
-
-              Dataset dataset =
-                  datasets.stream()
-                      .filter(d -> d.getDatasetId().equals(datasetId))
-                      .findFirst()
-                      .orElse(null);
-
-              List<Election> associatedElections = elections.stream()
-                  .filter(e ->
-                      e.getReferenceId()
-                          .equalsIgnoreCase(dataAccessRequest.getReferenceId())
-                  ).collect(Collectors.toList());
-
-              List<Election> filteredAccessElections = associatedElections
-                  .stream()
-                  .filter(e -> e.getElectionType()
-                      .equalsIgnoreCase(ElectionType.DATA_ACCESS.getValue())
-                  ).collect(Collectors.toList());
-
-              List<Election> filteredRpElections = associatedElections
-                  .stream()
-                  .filter(e -> e.getElectionType()
-                      .equalsIgnoreCase(ElectionType.RP.getValue())
-                  ).collect(Collectors.toList());
-
-              Optional<Election> accessElection = searchFilteredElectionList(
-                  filteredAccessElections);
-              Optional<Election> rpElection = searchFilteredElectionList(filteredRpElections);
-
-              Optional<Match> match =
-                  matches.stream()
-                      .filter(
-                          m -> m.getPurpose().equalsIgnoreCase(dataAccessRequest.getReferenceId()))
-                      .findFirst();
-
-              Optional<Dac> dac =
-                  accessElection
-                      .map(
-                          election ->
-                              dacs.stream()
-                                  .filter(
-                                      d -> d.getElectionIds().contains(election.getElectionId()))
-                                  .findFirst())
-                      .flatMap(Function.identity());
-
-              DarCollection collection = collectionMap.get(dataAccessRequest.collectionId);
-              String darCode = Objects.nonNull(collection) ? collection.getDarCode() : null;
-
-              return new DarDecisionMetrics(
-                  dataAccessRequest,
-                  dac.orElse(null),
-                  dataset,
-                  accessElection.orElse(null),
-                  rpElection.orElse(null),
-                  match.orElse(null),
-                  darCode);
-            })
-        .collect(Collectors.toList());
-  }
-
-  private List<DacDecisionMetrics> getDacMetrics(List<Dac> allDacs, Set<DatasetDTO> datasetsDacs,
-      List<DarDecisionMetrics> darMetrics) {
-    return allDacs.stream()
-        .map(
-            dac -> {
-              List<DarDecisionMetrics> dacFilteredMetrics =
-                  darMetrics.stream()
-                      .filter(m -> Objects.nonNull(m.getDacName()))
-                      .filter(m -> m.getDacName().equalsIgnoreCase(dac.getName()))
-                      .collect(Collectors.toList());
-              List<DatasetDTO> dacFilteredDatasets =
-                  datasetsDacs.stream()
-                      .filter(ds -> ds.getDacId().equals(dac.getDacId()))
-                      .collect(Collectors.toList());
-              return new DacDecisionMetrics(dac, dacFilteredDatasets, dacFilteredMetrics);
-            })
-        .collect(Collectors.toList());
-  }
-
-  private static Optional<Election> searchFilteredElectionList(List<Election> electionList) {
-    //Search for first instance where finalVote is non-null
-    //Only one chairperson vote is registered with current flow (later votes won't be registered due to closed status of election)
-    //Legacy vote flow had odd behavior where, upon Chair vote submission, all Chair votes within an election would have their vote updated
-    //Example: Chair A submits YES, vote for CHAIR A, CHAIR B, CHAIR C would all be YES
-    //This has already been corrected in a previous PR so newer votes will not have this issue
-    //As such, the above pattern largely holds to older records, (maybe Q3 2020 and earlier)
-    //In this instance findFirst is still appropriate since the vote value is still accurate
-    //Currently user id is not used in the DataAccess/RP analysis (% agreement, % accurate, etc), so user-vote attribution isn't a concern
-    //That said if, for whatever reason, you want to do vote tracking/analysis by user, legacy pattern/records will make the task difficult
-    Optional<Election> election = electionList
-        .stream()
-        .sorted(Comparator.comparing(Election::getFinalVote,
-            Comparator.nullsLast(Comparator.naturalOrder())))
-        .findFirst();
-    return election;
-  }
-
   public DatasetMetrics generateDatasetMetrics(Integer datasetId) {
 
     DatasetMetrics metrics = new DatasetMetrics();
@@ -245,8 +79,7 @@ public class MetricsService {
     //find dars with the given datasetId in their list of datasetIds, datasetId is a String so it can be converted to jsonb in query
     //convert all dars into smaller objects that only contain the information needed
     List<DataAccessRequest> dars = darDAO.findApprovedDARsByDatasetId(datasetId);
-    List<Integer> darCollectionIds = dars.stream().map(DataAccessRequest::getCollectionId)
-        .collect(Collectors.toList());
+    List<Integer> darCollectionIds = dars.stream().map(DataAccessRequest::getCollectionId).toList();
     List<DarCollection> darCollections = darCollectionIds.isEmpty() ? List.of() :
         darCollectionDAO.findDARCollectionByCollectionIds(darCollectionIds);
     Map<Integer, DarCollection> collectionMap = darCollections.stream()
@@ -271,6 +104,6 @@ public class MetricsService {
     metrics.setDataset(datasets.iterator().next());
     metrics.setDars(darInfo);
     return metrics;
-
   }
+
 }
